--- a/Redis/DockerfileRedisTools
+++ b/Redis/DockerfileRedisTools
@@ -1,11 +1,7 @@
 FROM ubuntu:latest
 
-#no git 
+#just redis-tools
 MAINTAINER  jiudiaren <lianpengfei12@foxmail.com>
- 
 RUN apt-get update
- 
-RUN apt-get -y install redis-server redis-tools
-
-EXPOSE 6397
-ENTRYPOINT ["/usr/bin/redis-server"]
+RUN apt-get -y install  redis-tools
+CMD ["/bin/bash"]
