--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ MESSAGE(STATUS "INCLUDE_INSTALL_DIR " ${INCLUDE_INSTALL_DIR})
 
 #包含子文件夹
 ADD_SUBDIRECTORY(./src)
+ADD_SUBDIRECTORY(./StackDisorder)
 ADD_SUBDIRECTORY(./DataStrutAndAlgo)
 
 #设置提示信息
