--- a/DataStrutAndAlgo/CMakeLists.txt
+++ b/DataStrutAndAlgo/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_SUBDIRECTORY(./Other)
 ADD_SUBDIRECTORY(./Skiplist)
 ADD_SUBDIRECTORY(./Sort)
 ADD_SUBDIRECTORY(./Tree)
+ADD_SUBDIRECTORY(./Stack)
 ADD_SUBDIRECTORY(./main)
 
 
