--- a/DataStrutAndAlgo/main/CMakeLists.txt
+++ b/DataStrutAndAlgo/main/CMakeLists.txt
@@ -6,10 +6,10 @@ include_directories(../Other)
 include_directories(../Skiplist)
 include_directories(../Sort)
 include_directories(../Tree)
-
+include_directories(../Stack)
 
 add_executable(DataStructEXE main.cpp )
-target_link_libraries(DataStructEXE  Dynamic Graph  List Other Sort Tree )
+target_link_libraries(DataStructEXE  Dynamic Graph  List Other Sort Tree  Stack)
 
 install(TARGETS DataStructEXE
         LIBRARY DESTINATION ${LIB_INSTALL_DIR}
