cmake ok for multithread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ MESSAGE(STATUS "INCLUDE_INSTALL_DIR " ${INCLUDE_INSTALL_DIR})
 ADD_SUBDIRECTORY(./src)
 ADD_SUBDIRECTORY(./StackDisorder)
 ADD_SUBDIRECTORY(./DataStrutAndAlgo)
+ADD_SUBDIRECTORY(./MultiThread)
 
 #设置提示信息
 MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
